Remove loan module components

--- a/src/app/views/pages/dashboard/dashboard.component.html
+++ b/src/app/views/pages/dashboard/dashboard.component.html
@@ -114,7 +114,7 @@
 								$15,000.</strong> 3.3% APR representative on loans between $7,000 and $15,000. Subjected
 							to credit status. T&Cs apply.</p>
 						<div class="form-group" style="text-align: center;">
-							<button disabled class="btn btn-primary" [routerLink]="['/loan']" data-toggle="tooltip" data-placement="top" title="This feature has been temporarily disabled.">
+							<button disabled class="btn btn-primary" data-toggle="tooltip" data-placement="top" title="This feature has been temporarily disabled.">
 								<!-- <img src="./assets/media/company-logos/mambu.png" class="pl-2 button-logo"> -->
 								APPLY NOW | <img src="./assets/media/company-logos/smartbank.png" class="pl-2 button-logo">
 							</button>
